--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@
 
 .mission-container {
   margin: 0 auto;
+  padding-top: 20px;
   max-width: 1200px;
   display: flex;
   min-height: var(--app-height);
