--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,6 @@
 
 .mission-container {
   margin: 0 auto;
-  padding-top: 20px;
   max-width: 1200px;
   display: flex;
   min-height: var(--app-height);
@@ -34,6 +33,7 @@
 
 .progress-container {
   flex-basis: 33.33%;
+  padding-top: 20px;
 }
 
 .mission-title {
@@ -57,6 +57,7 @@
 .workspace-container {
   flex-basis: 66.66%;
   background: #fff;
+  padding-top: 20px;
 }
 
 body {
@@ -64,32 +65,6 @@ body {
 
   font-family: sans-serif;
 }
-
-.topic {
-  /*display: inline-block;
-
-  margin: 1em;
-
-  background-color: #efefef;
-  border: 1px solid #ccc;
-  border-radius: 0.5em;
-
-  min-width: 10em;
-  vertical-align: top;*/
-}
-
-.topic-header {
-  /*overflow: auto;
-
-  padding: 1em;
-
-  color: #efefef;
-  background-color: #333;
-
-  border-top-left-radius: 0.5em;
-  border-top-right-radius: 0.5em;*/
-}
-
 .topic-title {
   display: flex;
   align-items: center;
@@ -125,9 +100,6 @@ body {
   outline: none;
   border: solid 1px #707070;
   box-shadow: 0 0 5px 1px #969696;
-}
-
-.topic-add-task {
 }
 
 .topic-delete {
@@ -500,6 +472,7 @@ body {
   margin-bottom: 20px;
   color: #555;
   border-radius: 5px;
+  min-height: 295px;
 }
 
 .editor-task-list {
